# SmartBlueprint

./: .replit  AndroidManifest.xml  CMakeLists.txt  COMPLETE-DESKTOP-APP-GUIDE.md  DESKTOP-BUILD-INSTRUCTIONS.md  DESKTOP-SETUP.md  ENHANCED-MANUAL.md  FINAL-SOLUTION-GUIDE.md  LICENSE.txt  Makefile  PRODUCTION-README.md  PROFESSIONAL-IMPLEMENTATION-SUMMARY.md  README.md  SmartBlueprint-Enhanced.cpp  SmartBlueprint-GUI.cpp  SmartBlueprint-Installer.ps1  SmartBlueprint-Production.cpp  SmartBlueprint-Professional.cpp  SmartBlueprint-Professional.vcxproj  SmartBlueprint-Windows.cpp  SmartBlueprintPingApp.kt  SmartBlueprintPro.sln  WINDOWS-BUILD-GUIDE.md  advanced_signal_processing.py  android-deployment-guide.md  build-complete-desktop.js  build-complete-windows-app.bat  build-complete-windows-desktop.cjs  build-complete-windows-desktop.js  build-desktop.cjs  build-desktop.js  build-electron-app.cjs  build-electron-app.js  build-electron-windows.cjs  build-installer.js  build-windows-desktop.js  build-windows-executable.bat  build-windows-installer.js  build.gradle  build.js  (+46 more)
.github/workflows/: build-test-deploy.yml
SmartBlueprint-Windows/: INSTALL.txt  README.md  install.ps1  launcher.bat
SmartBlueprint-Windows-Enhanced/: README.md  enhanced_ml_monitoring.py  install.bat  ml_inference_service.py  mobile_ping_service.py  optimize-imports.py  package.json  predictive_analytics_engine.py  start.js
SmartBlueprint-Windows-Enhanced/server/: ai-agent-backend.ts  cloud-sync-tunnel.ts  comprehensive-device-discovery.ts  device-adapter.ts  device-scanner.ts  index.ts  meta-ai-monitor.ts  ml-anomaly-detection.ts  ml-predictive-analytics.ts  monitoring-service.ts  network-discovery.ts  pet-recognition-ai.ts  predictive-maintenance-ai.ts  routes.ts  routes.ts.backup  types.d.ts
SmartBlueprint-Windows-Enhanced/shared/: schema.ts
SmartBlueprint-Windows-GUI/: README.md  SmartBlueprint-Pro-GUI.bat  advanced_signal_processing.py  electron-builder.json  package.json
SmartBlueprint-Windows-GUI/server/: enhanced-device-telemetry.ts  index.ts  routes.ts.clean
attached_assets/: Pasted--1-Build-the-ML-Model-Anomaly-Detection-for-RSSI-Devices-We-ll-train-a-simple-IsolationForest-1750037370792_1750037370793.txt  Pasted--Active-Ping-Latency-Probing-Why-When-Works-on-any-AP-no-special-hardware-Coarse-tens-to-hun-1750054943839_1750054943841.txt  Pasted--Desktop-Agent-Active-Ping-Latency-Probing-System-Provides-meter-level-distance-measurement-us-1750095795912_1750095795912.txt  Pasted--Enhanced-Desktop-Agent-with-Predictive-Maintenance-Integration-Comprehensive-device-health-mon-1750095818435_1750095818435.txt  Pasted--How-It-Works-Full-Flow-1-User-Visits-Your-Web-App-Signs-up-logs-in-Web-app-prompts-Downlo-1750037022768_1750037022769.txt  Pasted--What-the-AI-Agent-Will-Do-Feature-Description-Device-monitoring-Detect-offline-or-flapping-dev-1750037311500_1750037311502.txt  Pasted--usr-bin-env-node-SmartBlueprint-Pro-Desktop-Agent-Installer-Refactored-Downloads-and-1750095777061_1750095777062.txt  Pasted-1-Desktop-Agent-Ping-Publish-Assuming-your-desktop-agent-is-a-simple-Node-js-script-you-can-ada-1750054993740_1750054993742.txt  Pasted-1-Device-Discovery-Telemetry-Ingestion-mDNS-SSDP-UPnP-Scanning-Use-Python-packages-like-zeroconf-1750054081209_1750054081212.txt  Pasted-1-Device-Signal-Acquisition-RSSI-vs-CSI-Most-off-the-shelf-TVs-bulbs-etc-won-t-expose-r-1749963590671_1749963590671.txt  Pasted-An-AI-agent-in-your-system-is-a-persistent-monitoring-process-running-either-Locally-inside-the--1750037207431_1750037207432.txt  README_1750230656474.md  SmartBlueprint-Windows-Source-Enhanced_1750230656477.cpp  SmartBlueprint_Fix_Recommendations_1750221196173.csv  compile-windows_1750230656472.bat  electron-builder.config_1750441701946.js  package_1750441701959.json  settings_1750230656474.ini
client/src/: App.tsx  index.css  main.js
client/src/components/: AnomalyDashboard.tsx  ai-insights-dashboard.tsx  coverage-analysis.tsx  data-integrity-status.tsx  desktop-agent-download.tsx  device-details-modal.tsx  device-discovery.tsx  device-room-assignment.tsx  enhanced-floorplan-sketch.tsx  error-boundary.tsx  floorplan-canvas.tsx  live-alerts-feed.tsx  loading-states.tsx  meta-ai-fix-queue.tsx  ml-analytics-panel.tsx  mobile-nav.tsx  monitoring-dashboard.tsx  network-device-discovery.tsx  network-diagnostic-tool.tsx  ping-monitor.tsx  recommendation-panel.tsx  room-heatmap.tsx  room-management-panel.tsx  sidebar.tsx  signal-heatmap.tsx  system-health-monitor.tsx  wifi-connection-check.tsx  workflow-test.tsx
client/src/hooks/: use-ai-actions.ts  use-websocket.ts
client/src/lib/: device-scanner.ts  mapping-algorithms.ts  queryClient.ts
client/src/pages/: advanced-analytics.tsx  ai-insights.tsx  dashboard.tsx  device-control.tsx  device-discovery.tsx  (+14 more)
desktop-app-build/: electron-builder.config.js  package.json
desktop-releases/SmartBlueprint-Pro-Desktop/: SmartBlueprint-Pro.bat
docs/: desktop-cli-ux-flow.md
native-core/: CMakeLists.txt  DesktopUI.cpp  DesktopUI.h  DeviceClassifier.cpp  DeviceClassifier.h  MLEngine.cpp  MLEngine.h  NetworkScanner.cpp  NetworkScanner.h  SignalProcessor.cpp  SignalProcessor.h  SmartBlueprintCore.cpp  SmartBlueprintCore.h  app.manifest  main.cpp  main_new.cpp
server/: active-ping-probing.ts  advanced-ml-models.ts  advanced-signal-processing.ts  ai-agent-backend.ts  comprehensive-device-discovery.ts  data-integrity-monitor.ts  desktop-agent.ts  device-scanner.ts  index.ts  index.ts.backup  ml-analytics.ts  ml-anomaly-detection.ts  monitoring-service.ts  routes.ts  smart-home-platforms.ts  storage.ts  test-device-discovery.ts
shared/: schema.ts
tests/android/: SmartBlueprintActivityTest.kt
tests/native-core/: test_network_scanner.cpp
tests/python/: test_signal_processing.py
windows-deployment/app/: package.json  server.js
windows-deployment/nodejs/: README.txt
windows-installer/: install.bat
windows-installer-build/: installer.bat
windows-installer-build/app/: package.json  server.js
windows-installer/app/: SmartBlueprint-Pro.bat  start.js
(+8 files in other folders)
